# TC-SDE

./: .gitignore  CMakeLists.txt  Makefile  coordinateur.c  coordinateur.h  feux.c  feux.h  generateur_trafic.c  generateur_trafic.h  generateur_trafic_prioritaire.c  generateur_trafic_prioritaire.h  lib.c  lib.h  run.sh  voiture.c  voiture.h
headers/: coordinateur.h  generateur_trafic.h  lib.h  voiture.h
lib/: shmem.h
